<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:background="@drawable/button_bg"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_height="100dp"
        android:text="@string/question" />

    <Button
        android:id="@+id/discussion"
        android:layout_width="match_parent"
        android:background="@drawable/button_bg"
        android:enabled="false"
        android:text="@string/discussion_inactive"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/practise"
        android:enabled="false"
        android:text="@string/practise_inactive"
        android:background="@drawable/button_bg"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_height="100dp" />

</LinearLayout>